# great_expectations_talk

./: .gitignore  01-gx-suite-creation.ipynb  pyproject.toml
great_expectations_talk/: runner.py
great_expectations_talk/great_expectations/: great_expectations.yml
great_expectations_talk/great_expectations/checkpoints/: movies_checkpoint.yml
great_expectations_talk/great_expectations/expectations/: .ge_store_backend_id  movies.json
